// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirm should render correctly 1`] = `
<body
  class="Modal__body"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="Modal__overlay"
    >
      <div
        aria-label="Content Label"
        aria-modal="true"
        class="Modal__content Dialog"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="Dialog__content"
          role="alert"
        >
          Body of the confirm
        </div>
        <div
          class="Dialog__actions"
        >
          <button
            class="Button Button--variant_ghost Button--context_secondary Dialog__cancel"
            type="button"
          >
            Cancel
          </button>
          <button
            class="Button Button--variant_filled Button--context_primary"
            type="button"
          >
            OK
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Confirm should render correctly with title 1`] = `
<body
  class="Modal__body"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="Modal__overlay"
    >
      <div
        aria-label="Content Label"
        aria-modal="true"
        class="Modal__content Dialog"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="Dialog__content"
          role="alert"
        >
          <h2
            class="Heading Heading--level_h2 Dialog__title"
          >
            Title
          </h2>
          Body of the confirm
        </div>
        <div
          class="Dialog__actions"
        >
          <button
            class="Button Button--variant_ghost Button--context_secondary Dialog__cancel"
            type="button"
          >
            Cancel
          </button>
          <button
            class="Button Button--variant_filled Button--context_primary"
            type="button"
          >
            OK
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
